fix container wrapping behavior in IE

--- a/styles/components/_alerts.scss
+++ b/styles/components/_alerts.scss
@@ -48,6 +48,8 @@
   }
 
   .alert__content {
+    flex: 1;
+
     .alert__message {
       &:last-child {
         > *:last-child {
